<resources>

    <string name="app_name">ClienteRest</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Ejemplo Web Service Rest</string>
    <string name="titulo">Suma</string>
    <string name="sumando1">Sumando 1</string>
    <string name="sumando2">Sumando 2</string>
    <string name="resultado">Resultado</string>
    <string name="sumar">Sumar</string>
    <string name="cargando">cargando</string>
    <string name="title_activity_soap">Suma 2 numeros con SOAP</string>

</resources>